provider-azure/examples-generated/apimanagement/gateway.yaml
apiVersion: apimanagement.azure.upbound.io/v1beta1
kind: Gateway
metadata:
  name: example
spec:
  forProvider:
    apiManagementId: ${azurerm_api_management.example.id}
    description: Example API Management gateway
    locationData:
    - city: example city
      district: example district
      name: example name
      region: example region
    name: example-gateway
  providerConfigRef:
    name: example
